@@ -6,9 +6,9 @@ import ua.com.javarush.gnew.file.FileManager;
 import ua.com.javarush.gnew.runner.Command;
 import ua.com.javarush.gnew.runner.RunOptions;
 
-import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.io.IOException;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.util.List;
 import java.util.logging.Level;
 import java.util.logging.Logger;
@@ -18,7 +18,7 @@ public class Main {
     private static final Logger LOGGER = Logger.getLogger(Main.class.getName());
 
     public static void main(String[] args) {
-        RunOptions runOptions = new RunOptions(Command.BRUTEFORCE, 1, Paths.get("input.txt"), Paths.get("output.txt"));
+        RunOptions runOptions = new RunOptions(Command.BRUTEFORCE, 1, Path.of("data", "input.txt"), Path.of("data", "output.txt"));
         FileManager fileManager = new FileManager();
         Cypher cypher = new Cypher();
         FrequencyAnalysis frequencyAnalysis = new FrequencyAnalysis();
@@ -31,19 +31,32 @@ public class Main {
     }
 
     public static void performFrequencyAnalysis(FileManager fileManager, Cypher cypher, FrequencyAnalysis frequencyAnalysis, RunOptions runOptions) throws IOException {
-        if (runOptions.getFilePathForStaticAnalysis() != null) {
-            String staticContent = fileManager.read(runOptions.getFilePathForStaticAnalysis());
+        Path inputFilePath = runOptions.getFilePath();
+        Path staticFilePath = runOptions.getFilePathForStaticAnalysis();
+
+        if (Files.notExists(inputFilePath)) {
+            LOGGER.log(Level.SEVERE, "Input file does not exist: " + inputFilePath.toString());
+            throw new IOException("File does not exist: " + inputFilePath);
+        }
+
+        if (staticFilePath != null && Files.notExists(staticFilePath)) {
+            LOGGER.log(Level.SEVERE, "Static file for analysis does not exist: " + staticFilePath.toString());
+            throw new IOException("File does not exist: " + staticFilePath);
+        }
+
+        if (staticFilePath != null) {
+            String staticContent = fileManager.read(staticFilePath);
             List<Character> alphabet = cypher.determineAlphabet(staticContent);
 
             int key = frequencyAnalysis.performFrequencyAnalysis(staticContent, alphabet);
             String decryptedContent = cypher.decrypt(staticContent, key);
 
-            Path newFilePath = Paths.get(createNewFileName(runOptions.getFilePath(), "DECRYPTED_KEY_" + key));
+            Path newFilePath = Path.of(createNewFileName(inputFilePath, "DECRYPTED_KEY_" + key));
             fileManager.write(newFilePath, decryptedContent);
         }
     }
 
-    protected static String createNewFileName(Path filePath, String suffix) {
+    private static String createNewFileName(Path filePath, String suffix) {
         String fileName = filePath.getFileName().toString();
         int dotIndex = fileName.lastIndexOf('.');
         if (dotIndex > 0) {
